# Souls-of-Stockholm

./: Makefile  README.md  build.sh  database.sql  dev_database.sql  pyproject.toml  requirements.txt  setup.cfg
stockholm_souls/: __init__.py  api_handlers.py  app.py  searching.py  secrets.py  user_handlers.py
stockholm_souls/TelegramBot/: Program.cs
stockholm_souls/app_handlers/: api_handlers.py  posts_handlers.py  user_handlers.py
stockholm_souls/database/: api_handler.py  db.py  db_api_handlers.py  db_conn.py  db_posts_handlers.py  db_user_nadlers.py  validator.py
stockholm_souls/templates/: docs.html  header.html  index.html  post.html  profiles.html  style.css
stockholm_souls/templates/error/: index.html
stockholm_souls/templates/posts/: create_post.html  post.html  style.css
stockholm_souls/templates/user/: index.html  login.html  profile.html  profiles.html  register.html  style.css
stockholm_souls/templates/user/css/: style.css
